--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 markdown: kramdown
 kramdown:
-   auto_ids: true
+  input: GFM
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    css_class: 'highlight'
 plugins:
   - jekyll-gist
