Make the config smaller

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,4 @@
 markdown: kramdown
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
-  syntax_highlighter_opts:
-    css_class: 'highlight'
+highlighter: rouge
 plugins:
   - jekyll-gist
